crates/ars-components/src/data_display/snapshots/ars_components__data_display__meter__tests__meter_root_default.snap
---
source: crates/ars-components/src/data_display/meter.rs
expression: "snapshot_attrs(&api(Props::new().id(\"meter\").value(50.0)).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "meter",
            ),
        ),
        (
            Data(
                "ars-segment",
            ),
            String(
                "optimal",
            ),
        ),
        (
            Data(
                "ars-zone",
            ),
            String(
                "optimal",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "meter-label",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "100",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "50",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "50%",
            ),
        ),
        (
            Id,
            String(
                "meter",
            ),
        ),
        (
            Role,
            String(
                "meter",
            ),
        ),
        (
            Max,
            String(
                "100",
            ),
        ),
        (
            Min,
            String(
                "0",
            ),
        ),
        (
            Value,
            String(
                "50",
            ),
        ),
    ],
    styles: [],
}
