crates/ars-components/src/data_display/snapshots/ars_components__data_display__meter__tests__meter_root_threshold_critical.snap
---
source: crates/ars-components/src/data_display/meter.rs
expression: "snapshot_attrs(&api(Props::new().id(\"meter\").value(90.0).low(20.0).high(80.0).optimum(10.0)).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "meter",
            ),
        ),
        (
            Data(
                "ars-segment",
            ),
            String(
                "sub-sub-optimal",
            ),
        ),
        (
            Data(
                "ars-zone",
            ),
            String(
                "critical",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "meter-label",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "100",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "90",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "90%",
            ),
        ),
        (
            Id,
            String(
                "meter",
            ),
        ),
        (
            Role,
            String(
                "meter",
            ),
        ),
        (
            High,
            String(
                "80",
            ),
        ),
        (
            Low,
            String(
                "20",
            ),
        ),
        (
            Max,
            String(
                "100",
            ),
        ),
        (
            Min,
            String(
                "0",
            ),
        ),
        (
            Optimum,
            String(
                "10",
            ),
        ),
        (
            Value,
            String(
                "90",
            ),
        ),
    ],
    styles: [],
}
